[package]
name = "strkey"
version = "0.1.0"
authors = ["Christopher Foo <chris.foo@gmail.com>"]
edition = "2018"
description = "Serialize values into a human-readable encoding that preserves lexicographic sort order."
repository = "https://github.com/chfoo/strkey/"
license = "MPL-2.0"
keywords = ["serde", "serialization"]
categories = ["encoding"]

[dependencies]
hex = "0.4"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
